kubernetes/staging/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: staging

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        image: 622488711452.dkr.ecr.us-east-2.amazonaws.com/capstone-backend:cba1b0bc5f81b7a883318bf2d496b55d00e5a08f

        imagePullPolicy: Always

        ports:

        - containerPort: 8080
