kubernetes/staging/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: staging

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: 622488711452.dkr.ecr.us-east-2.amazonaws.com/capstone-frontend:8562c1ab386405890ebf3754bba3a82f2a03ae74

        imagePullPolicy: Always

        ports:
        - containerPort: 80
