kubernetes/staging/frontend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout

metadata:
  name: frontend
  namespace: staging
  
spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  strategy:
    blueGreen:
      activeService: frontend-active
      previewService: frontend-preview
      autoPromotionEnabled: true

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: capstone-frontend:latest

        imagePullPolicy: Always
        ports:
          - containerPort: 80
