kubernetes/staging/frontend-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
  namespace: staging

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80
